--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -173,6 +173,13 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loading BERT pre-processing model from tensor flow hub** "
+   ]
   }
  ],
  "metadata": {
