Loaded pre-trained BERT model to provide vector representations

--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -289,6 +289,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "bert_encoder = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\", trainable=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train all BERT layers as suggested by BERT developers\n",
+    "bert_encoder.trainable = True\n",
+    "\n",
+    "# Bert layers\n",
+    "outputs = bert_encoder(preprocessed_text)\n",
+    "\n",
+    "# Dense layers\n",
+    "l = keras.layers.Dense(1, activation='sigmoid', name=\"output\") (outputs['pooled_output'])\n",
+    "\n",
+    "# Use inputs and outputs to construct a final model\n",
+    "model = keras.Model(inputs=text_inputs, outputs = [l])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.input_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 2\n",
+    "batch_size = 8\n",
+    "init_lr = 3e-5  # best of [5e-5, 3e-5, 2e-5]\n",
+    "\n",
+    "train_data_size = X_train.shape[0]\n",
+    "steps_per_epoch = train_data_size // batch_size\n",
+    "num_train_steps = steps_per_epoch * epochs\n",
+    "num_warmup_steps = num_train_steps // 10\n",
+    "\n",
+    "test_data_size = X_test.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = optimization.create_optimizer(\n",
+    "      init_lr=init_lr,\n",
+    "      num_train_steps=num_train_steps,\n",
+    "      num_warmup_steps=num_warmup_steps,\n",
+    "      optimizer_type='adamw')\n",
+    "\n",
+    "model.compile(optimizer=optimizer,\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics='accuracy')\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
