Training and testing the model

--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -357,6 +357,77 @@
     "\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Training the Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_encoder.trainable = False\n",
+    "model.fit(X_train,\n",
+    "          y_train,\n",
+    "          steps_per_epoch=steps_per_epoch,\n",
+    "          epochs=epochs,\n",
+    "          validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model.predict(X_test)\n",
+    "prediction_real = model.predict(X_test[y_test == 0])\n",
+    "prediction_fake = model.predict(X_test[y_test == 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_bi_real = prediction_real.copy()\n",
+    "prediction_bi_real[np.where(prediction_real <= 0.5)] = 0\n",
+    "prediction_bi_real[np.where(prediction_real > 0.5)] = 1\n",
+    "print('True Positive Rate:', '{:.2%}'.format(1 - sum(prediction_bi_real)[0] / len(prediction_bi_real)))\n",
+    "\n",
+    "prediction_bi_fake = prediction_fake.copy()\n",
+    "prediction_bi_fake[np.where(prediction_fake <= 0.5)] = 0\n",
+    "prediction_bi_fake[np.where(prediction_fake > 0.5)] = 1\n",
+    "print('True Negative Rate:', '{:.2%}'.format(sum(prediction_bi_fake)[0] / len(prediction_bi_fake)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_ind = np.random.choice(len(X_test.index))\n",
+    "realfake = 'Real' if y_test[demo_ind] == 0 else 'Fake'\n",
+    "prediction = model.predict([X_test[demo_ind]])\n",
+    "prediction_rf = 'Real' if prediction <= 0.5 else 'Fake'\n",
+    "\n",
+    "print(f'{realfake} review to be fed to model:\\n', X_test[demo_ind], '\\n')\n",
+    "print(f'Model prediction: {prediction_rf}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
