Saving the trained model

--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -423,6 +423,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Saving the trained model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "main_save_path = '/content/drive/MyDrive/deceptiveopinion'\n",
+    "saved_model_name = 'Fine_Tune_Bert'\n",
+    "saved_model_path = os.path.join(main_save_path, \"model-96-\")\n",
+    "save_options = tf.saved_model.SaveOptions(experimental_io_device='/job:localhost')\n",
+    "model.save(saved_model_path, options=save_options,include_optimizer=False,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reloading the saved model for testing purposes**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
