Reloading saved model for testing purposes

--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -456,7 +456,132 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reloaded_model = tf.saved_model.load(\"model-96-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8087,)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4040,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test[y_test == 0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_real = reloaded_model(X_test[y_test == 0][:230])\n",
+    "prediction_fake = reloaded_model(X_test[y_test == 1][:230])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_fake=prediction_fake.numpy()\n",
+    "prediction_real=prediction_real.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_fake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_bi_real = prediction_real.copy()\n",
+    "prediction_bi_real[np.where(prediction_real <= 0.5)] = 0\n",
+    "prediction_bi_real[np.where(prediction_real > 0.5)] = 1\n",
+    "print('True Positive Rate:', '{:.2%}'.format(1 - sum(prediction_bi_real)[0] / len(prediction_bi_real)))\n",
+    "\n",
+    "prediction_bi_fake = prediction_fake.copy()\n",
+    "prediction_bi_fake[np.where(prediction_fake <= 0.5)] = 0\n",
+    "prediction_bi_fake[np.where(prediction_fake > 0.5)] = 1\n",
+    "print('True Positive Rate:', '{:.2%}'.format(sum(prediction_bi_fake)[0] / len(prediction_bi_fake)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=np.concatenate( (prediction_real,prediction_fake))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true=np.concatenate( (y_test[y_test==0][:230],y_test[y_test==1][:230]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred[[np.where(y_pred <= 0.5)]]=0\n",
+    "y_pred[[np.where(y_pred >= 0.5)]]=1"
+   ]
   }
  ],
  "metadata": {
