Evaluation of test results

--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -24,7 +24,8 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -570,7 +571,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_true=np.concatenate( (y_test[y_test==0][:230],y_test[y_test==1][:230]))"
+    "y_pred[[np.where(y_pred <= 0.5)]]=0\n",
+    "y_pred[[np.where(y_pred >= 0.5)]]=1"
    ]
   },
   {
@@ -579,8 +581,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred[[np.where(y_pred <= 0.5)]]=0\n",
-    "y_pred[[np.where(y_pred >= 0.5)]]=1"
+    "y_true=np.concatenate( (y_test[y_test==0][:230],y_test[y_test==1][:230]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Evaluation of test results from the saved model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "print(classification_report(y_true,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(confusion_matrix(y_true,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.heatmap(confusion_matrix(y_true,y_pred),annot=True,fmt=\"g\")"
    ]
   }
  ],
