testing with random records of test data

--- a/bert_transfer.ipynb
+++ b/bert_transfer.ipynb
@@ -618,6 +618,28 @@
    "source": [
     "sns.heatmap(confusion_matrix(y_true,y_pred),annot=True,fmt=\"g\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Testing with random records from test data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_ind = np.random.choice(len(X_test.index))\n",
+    "realfake = 'Real' if y_test[demo_ind] == 0 else 'Fake'\n",
+    "prediction = reloaded_model([X_test[demo_ind]])\n",
+    "prediction_rf = 'Real' if prediction.numpy()[0] <= 0.5 else 'Fake'\n",
+    "\n",
+    "print(f'{realfake} review to be fed to model:\\n', X_test[demo_ind], '\\n')\n",
+    "print(f'Model prediction: {prediction_rf}')"
+   ]
   }
  ],
  "metadata": {
